# NewsAgent

./: .gitignore
news_agent/news/: 2025-04-14_20-07-29_news_article.md  ai_agents_news_article.md  hugging_face_news_article.md  openai_news_article.md
news_agent/src/news_agent/: crew.py  main.py
news_agent/src/news_agent/config/: tasks.yaml
news_agent_flow/: README.md  pyproject.toml
news_agent_flow/news/: Figma sent a cease-and-desist letter to Lovable over the term ‘Dev Mode’_news_article.md  Meet Neptune, a TikTok alternative where creators can hide likes and follower counts_news_article.md  Xbox Game Pass Rumored To Be Preparing Biggest Stealth Drop Of All-Time_news_article.md
news_agent_flow/src/news_agent_flow/: main.py
news_agent_flow/src/news_agent_flow/crews/poem_crew/: news_agent_crew.py
news_agent_flow/src/news_agent_flow/crews/poem_crew/config/: agents.yaml  tasks.yaml
