[project]
name = "news_agent_flow"
version = "0.1.0"
description = "news_agent_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
]

[project.scripts]
kickoff = "news_agent_flow.main:kickoff"
run_crew = "news_agent_flow.main:kickoff"
plot = "news_agent_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
